[tool.poetry]
name = "twitter-dashboard-nft"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <72874670+baniasbaabe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snscrape = "^0.4.3"
dash = "^2.6.1"
tweepy = "^4.10.1"
pymongo = {extras = ["srv"], version = "^4.2.0"}
pandas = "^1.5.0"
joblib = "^1.2.0"
tqdm = "^4.64.1"
nltk = "^3.7"
emoji = "^2.1.0"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.8.0"
pipreqs = "^0.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
